--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Eliza/Dependencies/Bin2Object"]
-	path = Eliza/Dependencies/Bin2Object
+[submodule "Dependencies/Bin2Object"]
+	path = Dependencies/Bin2Object
 	url = https://github.com/djkaty/Bin2Object.git
