Minor refactoring and fixing padding

--- a/Eliza.UI/Eliza.UI.csproj
+++ b/Eliza.UI/Eliza.UI.csproj
@@ -14,10 +14,17 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Eliza\Eliza.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\Data\SkillData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
